<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="385dp"
            android:src="@drawable/img" />

        <EditText
            android:id="@+id/login_edit_text"
            android:hint="@string/login"
            android:text="admin777"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/password_edit_text"
            android:hint="@string/password"
            android:text="admin777"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/sign_button"
            android:layout_marginVertical="6dp"
            android:layout_marginHorizontal="32dp"
            android:text="@string/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/reg_text_view"
            android:text="@string/sign_up"
            android:padding="12dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>

