<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/night_blue"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:paddingVertical="36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/sign_text_view"
            android:text="@string/authorization"
            android:background="@color/transparent"
            android:textColor="@color/white"
            android:padding="18dp"
            android:layout_marginHorizontal="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/sign_up_text_view"
            android:text="@string/registration"
            android:background="@color/transparent"
            android:textColor="@color/gray"
            android:padding="18dp"
            android:layout_marginHorizontal="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>