<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/night_blue"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/container"
        android:visibility="visible"
        android:layout_marginTop="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="36dp"
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <LinearLayout
            android:background="@drawable/round_corners_background"
            android:layout_alignParentTop="true"
            android:paddingVertical="36dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/name_layout"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
              android:layout_marginHorizontal="12dp"
              android:layout_marginVertical="6dp"
              app:startIconDrawable="@drawable/ic_baseline_person_24"
              app:startIconTint="@color/mint_dark"
              app:endIconDrawable="@drawable/ic_baseline_clear_24"
              app:endIconMode="clear_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

              <EditText
                  android:id="@+id/name_edit_text"
                  android:hint="@string/name"
                  android:inputType="textPersonName"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content" />

          </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="6dp"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                app:startIconTint="@color/mint_dark"
                app:endIconDrawable="@drawable/ic_baseline_clear_24"
                app:endIconMode="clear_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login_edit_text"
                    android:hint="@string/login"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="6dp"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconTint="@color/mint_dark"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/mint_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_edit_text"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="6dp"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconTint="@color/mint_dark"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/mint_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/confirm_password_edit_text"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/sign_button"
            app:backgroundTint="@null"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_round_corners_background"
            android:layout_alignParentBottom="true"
            android:text="@string/sign_up"
            android:textSize="12sp"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>